# array

./: .gitlab-ci.yml  .travis.yml  array.cabal  changelog  changelog.md
.github/workflows/: build.yml  release.yml
Data/: Array.hs
Data/Array/: Base.hs  Diff.hs  IArray.hs  IO.hs  MArray.hs  ST.hs  Storable.hs  Unboxed.hs
Data/Array/IO/: Internals.hs  Safe.hs
Data/Array/MArray/: Safe.hs
Data/Array/ST/: Safe.hs
Data/Array/Storable/: Internals.hs
include/: Typeable.h
tests/: .gitignore  T2120.hs  T2120.stdout  T229.hs  T229.stderr  T229.stderr-ws-32  T229.stderr-ws-64  T229.stdout  T229.stdout-ws-32  T229.stdout-ws-64  T9220.stdout  all.T
